# vtk

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeFilters.cmake  CMakeLists.txt  CONTRIBUTING.md  Ioss_CopyDatabase.C  Ioss_DatabaseIO.h  Ioss_Getline.c  Ioss_Property.h  Ioss_StructuredBlock.h  Ioss_Utils.C  Ioss_VariableType.C  Ioss_VariableType.h  README.kitware.md  README.md  parser.c
.gitlab/: artifacts.yml  os-linux.yml  os-macos.yml  os-windows.yml  rules.yml  upload.yml
CMake/: CTestCustom.cmake.in  FindDawn.cmake  FindExprTk.cmake  FindJOGL.cmake  FindLibPROJ.cmake  FindPEGTL.cmake  FindTBB.cmake  FindWGPU.cmake  FindzSpaceCompat.cmake  (+32 more)
Examples/GUI/QML/QtQuickProperty/: CMakeLists.txt  main.cpp
Examples/Tutorial/Step1/Cxx/: CMakeLists.txt  Cone.cxx
Examples/Tutorial/Step2/Cxx/: CMakeLists.txt  Cone2.cxx
Examples/Tutorial/Step3/Cxx/: CMakeLists.txt  Cone3.cxx
Examples/Tutorial/Step5/Cxx/: CMakeLists.txt  Cone5.cxx
Examples/Tutorial/Step6/Cxx/: CMakeLists.txt  Cone6.cxx
Filters/General/Testing/: CMakeLists.txt
Filters/General/Testing/Cxx/: ArrayExtractFactoredArray.cxx  ArrayMatricizeArray.cxx  ArrayNormalizeMatrixVectors.cxx  BoxClipOrientedPointData.cxx  BoxClipPointData.cxx  BoxClipPolyData.cxx  BoxClipTetrahedra.cxx  BoxClipTriangulate.cxx  BoxClipTriangulateAndInterpolate.cxx  CMakeLists.txt  CellTreeLocator.cxx  TestAppendPoints.cxx  TestBandFiltering.cxx  TestBooleanOperationPolyDataFilter.cxx  TestBooleanOperationPolyDataFilter2.cxx  TestBooleanOperationPolyDataFilter3.cxx  TestBooleanOperationPolyDataFilter4.cxx  TestBooleanOperationPolyDataFilter5.cxx  TestBooleanOperationPolyDataFilter6.cxx  TestCellValidator.cxx  TestContourTriangulator.cxx  TestContourTriangulatorCutter.cxx  TestContourTriangulatorMarching.cxx  TestCountFaces.cxx  TestCountVertices.cxx  TestDataSetGradient.cxx  TestDataSetGradientPrecompute.cxx  TestDateToNumeric.cxx  TestDeformPointSet.cxx  TestDensifyPolyData.cxx  TestDistancePolyDataFilter.cxx  TestExtractGhostCells.cxx  TestFiniteElementFieldDistributor.cxx  TestGradientAndVorticity.cxx  TestGraphWeightEuclideanDistanceFilter.cxx  TestIconGlyphFilterGravity.cxx  TestImageDataToPointSet.cxx  TestIntersectionPolyDataFilter.cxx  TestIntersectionPolyDataFilter2.cxx  TestIntersectionPolyDataFilter3.cxx  (+20 more)
Filters/General/Testing/Data/Baseline/: TestBooleanOperationPolyDataFilter3.png.sha512  TestYoungsMaterialInterface.png.sha512
Filters/General/Testing/Python/: TestCellLocators.py  TestDiscreteFlyingEdges3D.py  TestDiscreteMarchingCubes.py  TestDiscreteMarchingCubesAdjacentScalars.py  TestRandomAttributeGenerator.py  TestRandomAttributeGeneratorScalar.py  clipQuadraticCells.py
Filters/MomentInvariants/: CMakeLists.txt  module.cmake  vtkMomentInvariants.cxx  vtkMomentInvariants.h  vtkMomentsHelper.cxx  vtkMomentsHelper.h  vtkMomentsTensor.h
Filters/Texture/Testing/: CMakeLists.txt
Filters/Texture/Testing/Cxx/: CMakeLists.txt  TestScalarsToTexture.cxx  TestTextureAtlasGenerator.cxx
GUISupport/QtQuick/Testing/Cxx/: CMakeLists.txt  TestQQuickCommon.cxx  TestQQuickCommon.h  TestQQuickVTK.qrc  TestQQuickVTKItem_1.cxx  TestQQuickVTKItem_1.qml  TestQQuickVTKItem_2.cxx  TestQQuickVTKItem_2.qml  TestQQuickVTKItem_3.cxx  TestQQuickVTKItem_3.qml  TestQQuickVTKRenderItem.cxx  TestQQuickVTKRenderItemWidget.cxx  TestQQuickVTKRenderWindow.cxx  TestQQuickVtkItem_1.cxx  TestQQuickVtkItem_1.qml  TestQQuickVtkItem_2.cxx  TestQQuickVtkItem_2.qml  TestQQuickVtkItem_3.cxx  TestQQuickVtkItem_3.qml
GUISupport/QtQuick2/Examples/QtQuickCone/: CMakeLists.txt  main.cpp  main.qml
IO/3DTiles/: CMakeLists.txt  README.md  TreeInformation.cxx  TreeInformation.h  main.cxx  test.sh  tiler.cxx  tiler.h  vtk.module  vtk3DTilesWriter.cxx  vtk3DTilesWriter.h
IO/CatalystConduit/: CMakeLists.txt  vtk.module  vtkConduitArrayUtilities.cxx  vtkConduitArrayUtilities.h  vtkConduitSource.cxx  vtkConduitSource.h  vtkConduitToDataObject.cxx  vtkConduitToDataObject.h  vtkDataObjectToConduit.cxx
IO/CatalystConduit/Catalyst/: CMakeLists.txt
IO/CatalystConduit/Testing/: CMakeLists.txt
IO/CatalystConduit/Testing/Cxx/: CMakeLists.txt  TestConduitSource.cxx  TestDataObjectToConduit.cxx
IO/DICOM/: .gitattributes  CMakeLists.txt  vtk.module  vtkDICOMAlgorithm.cxx  vtkDICOMAlgorithm.h  vtkDICOMApplyPalette.cxx  vtkDICOMApplyPalette.h  vtkDICOMApplyRescale.cxx  vtkDICOMApplyRescale.h  vtkDICOMCTGenerator.cxx  vtkDICOMCTGenerator.h  vtkDICOMCTRectifier.cxx  vtkDICOMCTRectifier.h  vtkDICOMCharacterSet.cxx  vtkDICOMCharacterSet.h  vtkDICOMCharacterSetTables.cxx  vtkDICOMCompiler.cxx  vtkDICOMCompiler.h  vtkDICOMConfig.h.in  vtkDICOMDataElement.h  vtkDICOMDictEntry.cxx  vtkDICOMDictEntry.h  vtkDICOMDictHash.cxx  vtkDICOMDictHash.h  vtkDICOMDictPrivate.cxx  vtkDICOMDictPrivate.h  vtkDICOMDictionary.cxx  vtkDICOMDictionary.h  vtkDICOMDirectory.cxx  vtkDICOMDirectory.h  vtkDICOMFile.cxx  vtkDICOMFile.h  vtkDICOMFileDirectory.cxx  vtkDICOMFileDirectory.h  vtkDICOMFilePath.cxx  vtkDICOMFilePath.h  vtkDICOMFileSorter.cxx  vtkDICOMFileSorter.h  vtkDICOMGenerator.cxx  vtkDICOMGenerator.h  (+42 more)
IO/DICOM/Examples/Cxx/: CMakeLists.txt  TestDICOMCompiler.cxx  TestDICOMDirectory.cxx  TestDICOMDisplay.cxx  TestDICOMFileSorter.cxx  TestDICOMOverlay.cxx  TestDICOMParser.cxx  TestDICOMReader.cxx  TestDICOMRealWorldValue.cxx  TestDICOMWriter.cxx
IO/DICOM/Testing/Cxx/: CMakeLists.txt  TestDICOMCharacterSet.cxx  TestDICOMDictionary.cxx  TestDICOMFilePath.cxx  TestDICOMItem.cxx  TestDICOMMetaData.cxx  TestDICOMSequence.cxx  TestDICOMTagPath.cxx  TestDICOMUtilities.cxx  TestDICOMVM.cxx  TestDICOMVR.cxx  TestDICOMValue.cxx
IO/DICOM/Testing/Python/: CMakeLists.txt  TestDICOMPython.py
IO/DICOM/Utilities/: chartables.py  makedict.py  nemadict.txt  parseuid.py
Rendering/OpenXR/Testing/Cxx/: CMakeLists.txt  TestOpenXRInitialization.cxx  TestOpenXRInstanciation.cxx  TestOpenXRInteractive.cxx  TestOpenXRInteractiveBox.cxx  TestOpenXRInteractiveDragon.cxx  TestOpenXRRendering.cxx
Utilities/Java/: CMakeLists.txt  vtkJavaAwt.h  vtkJavaUtil.cxx  vtkJavaUtil.h
(+8456 files in other folders)
